@@ -5,7 +5,7 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.List;
 import java.util.Scanner;
 
@@ -15,6 +15,11 @@ public class Fox {
 	static boolean hadError;
 	static boolean hadRuntimeError;
 	public static Scanner sc = new Scanner(System.in);
+	
+	private static String workingDirectory;
+	private static Path launchScriptLocation;
+	static Path launchScriptDirectory;
+	static Path currentExecutionDirectory;
 
 	public static void main(String[] args) throws IOException {
 		if (args.length > 1) {
@@ -25,11 +30,16 @@ public class Fox {
 		} else {
 			runPrompt();
 		}
-//		runFile("src/main/resources/script.fox");
 	}
 
 	private static void runFile(String path) throws IOException {
-		byte[] bytes = Files.readAllBytes(Paths.get(path));
+		// for the resolver to resolve relative links
+		workingDirectory = System.getProperty("user.dir");
+		launchScriptLocation = Path.of(workingDirectory, "\\", path);
+		launchScriptDirectory = launchScriptLocation.getParent();
+		currentExecutionDirectory = launchScriptDirectory;
+		
+		byte[] bytes = Files.readAllBytes(launchScriptLocation);
 		run(new String(bytes, Charset.defaultCharset()));
 		
 		if (hadError) System.exit(65);
@@ -69,14 +79,6 @@ public class Fox {
 		if (hadError) return null;
 		
 		return INTERPRETER.interpret(expressions);
-		
-//		// interpretation (execution)
-//		if (expressions.size() == 1) {
-//			Object result = INTERPRETER.interpret(expressions.get(0));
-//			
-//		} else {
-//			
-//		}
 	}
 	
 	public static Object evaluate(String src) {
